k8s/observability/headlamp/overlays/prod/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-headlamp
spec:
  parentRefs:
    - name: homelab-gw
      namespace: prod-networking
      sectionName: https
  hostnames:
    - headlamp.example.invalid
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ak-outpost-shared-outpost
          namespace: prod-auth
          port: 9000
